[tool.poetry]
name = "financialengineering-ir-xva"
version = "0.1.0"
description = ""
authors = ["Sergey Hein <sergey.hein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
jupyterlab = "^4.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
